<resources>
    <string name="app_name">Baby Needs</string>
    <string name="action_settings">Settings</string>
    <string name="enter_item">Enter Item</string>
    <string name="hint_item">Enter Item</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_color">Color</string>
    <string name="hint_Size">Size</string>
    <string name="DROPTABLE">DROP TABLE IF EXISTS</string>
    <string name="CREATETABLE">CREATE TABLE</string>
</resources>
